src/sections/projectModal/projectmodal.css
.projectmodal-container {
  width: 545px;
  height: 100vh;
  max-height: 100%;
  display: flex;
  justify-content: flex-end;
  position: fixed;
  z-index: 18000;
  top: 0;
  right: 0;
  margin-right: 0;
  flex: 1;
  overflow-y: scroll;
  scrollbar-color: #06d8fd #ffffff;
}

.overlay-projectmodal {
  background-color: black;
  z-index: 200;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  overflow-y: auto;
  background-size: cover;
  background-position: center center;
  opacity: 0.65;
}

.overlay-projectmodal::after {
  background: linear-gradient(to bottom, transparent 0%, rgb(70, 70, 70) 50%);
}

.container-right {
  width: 100%;
  max-width: 100%;
  height: 100vh;
  max-height: 100%;
  z-index: 12500;
  align-items: right;
  display: flex;
  flex-direction: column;
  background-color: transparent;
  overflow-y: auto;
  overflow-x: overlay;
  right: 545px;
  transition: right 0.6s ease-in-out;
}

.container-right .visible {
  right: 0px;
}

.projectmodal {
  padding: 30px;
  text-align: left;
  background: #fcfaf9;
  z-index: 18500;
}

.projectmodal.dark {
  background: rgb(0, 0, 0);
  background: linear-gradient(
    220deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(43, 43, 43, 1) 49%,
    rgba(48, 48, 48, 1) 100%
  );
}

.projectmodal-top-row {
  text-align: center;
  display: flex;
  justify-content: space-between;
  vertical-align: middle;
  align-items: center;
}

.back {
  color: #7e7e7e;
  font-size: 14px;
  cursor: pointer;
}
/* dark mode */
.back.dark {
  color: #eaeaea;
}

.back-to-projects a {
  font-weight: 800;
  font-size: 18px;
  word-spacing: 1px;
  letter-spacing: 0.3px;
  color: black;
}
/* dark mode */
.back-to-projects a.dark {
  color: #eaeaea;
}

.back-to-projects:hover {
  cursor: pointer;
  text-decoration: underline;
}

.separator hr {
  margin-top: 20px;
  border: 0.5px solid #eaeaea;
  height: 0.7px;
}

/* dark mode */
.separator hr.dark {
  border: 0.5px solid #fff;
}

.project-main-title-modal {
  margin: 28px 0 8px;
}
/* dark mode */
.project-main-titl-modal.dark {
  color: #fff;
}

h3.project-title-modal {
  color: #000;
  margin: 28px 0 8px;
  font-size: 24px;
}
/* dark mode */
h3.project-title-modal.dark {
  color: #fff;
}

.project-modal-text {
  font-size: 18px;
  letter-spacing: 0.5;
  word-spacing: 0.5;
  margin-bottom: 24px;
  display: inline-block;
  margin-right: 10px;
  font-weight: normal;
}
/* dark mode */
.project-modal-text.dark {
  color: #eaeaea;
}

.projectmodal-image {
  width: 100%;
  height: 500px !important;
  border-radius: 10px;
  border: 1px solid black;
}

.projectmodal-image img {
  transform: scale(1.6);
  padding-top: 80px;
  object-fit: contain;
}

.projectmodal-image.dark,
.projectmodal-image img.dark {
  border: 1px solid #eaeaea;
}
.projectmodal-about {
  margin: 26px 0 12px;
}

.project-title-modal.title-name {
  color: #363636;
  font-size: 26px;
  margin-top: 36px;
}
/* dark mode */
.project-title-modal.title-name.dark {
  color: #fff;
}

.projectmodal-tech .technologies {
  margin-top: 10px;
  margin-bottom: 15px;
}

.projectmodal-tech > p span {
  font-weight: bold;
  color: #000;
  background-color: #efe9e4;
  border-radius: 4px;
  padding: 10px 15px;
}

.project-website-heading {
  margin-top: 40px;
  margin-bottom: 12px;
}

.projectmodal-websitelink a {
  font-size: 17px;
  color: #363636;
  cursor: pointer;
}
/* dark mode */
.projectmodal-websitelink.dark a {
  color: #d4d4d4;
}

.projectmodal-websitelink:hover {
  text-decoration: underline;
}

.projectmodal-footer {
  width: 100%;
  height: 60px;
  background-color: #10253a;
  vertical-align: middle;
  align-items: center;
  justify-content: center;
  display: flex;
  padding: 20px 0;
}
/* dark mode */
.projectmodal-footer.dark {
  background-color: #efe9e4;
}

.projectmodal-footer-link p {
  color: #fff;
  font-size: 20px;
  letter-spacing: 1px;
  justify-content: center;
  text-align: center;
  z-index: 1500;
}
/* dark mode */
.projectmodal-footer-link.dark p.dark {
  color: #151515;
}

p.open-text a {
  font-weight: bold;
  font-size: 22px;
}

/* @media screen and (max-width: 1024px) {
} */

@media screen and (max-width: 450px) {
  .overlay-projectmodal {
    display: none;
  }
  .projectmodal-container {
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
  }

  .container-right {
    width: 100%;
    height: 100%;
    margin: 0 auto;
    overflow-y: auto;
  }

  .projectmodal {
    width: 100%;
    max-width: 100%;
    height: fit-content;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-wrap: wrap;
    flex-shrink: inherit;
    align-items: left;
  }
  .projectmodal-footer {
    position: relative;
    width: 100%;
    height: auto;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
  }
}

